[metadata]
name = flaskFarm
version = 0.0.1
url = ''
license = MIT
maintainer = Nguyen Tran Binh Nhu
maintainer_email = binhnhu1409@gmail.com
description = The Flask based web app built for farms.
long_description = file: README.md
long_description_content_type = markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    pandas
	gunicorn

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskFarm